--- a/package.json
+++ b/package.json
@@ -1,30 +1,19 @@
 {
   "name": "hubot-sling-schedule",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "author": "mattaniaha <maytenfsu14@apu.edu>",
   "description": "Allows hubot to pull scheduling information from Sling",
   "keywords": [
     "hubot",
     "sling"
   ],
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git://github.com/azusapacificuniversity/hubot-sling-schedule.git"
   },
-  "dependencies": {
-    "hubot": "^3.2.0",
-    "hubot-diagnostics": "^1.0.0",
-    "hubot-google-images": "^0.2.7",
-    "hubot-google-translate": "^0.2.1",
-    "hubot-help": "^1.0.1",
-    "hubot-heroku-keepalive": "^1.0.3",
-    "hubot-maps": "0.0.3",
-    "hubot-pugme": "^0.1.1",
-    "hubot-redis-brain": "^1.0.0",
-    "hubot-rules": "^1.0.0",
-    "hubot-scripts": "^2.17.2",
-    "hubot-shipit": "^0.2.1"
-  },
+  "dependencies": {},
+  "main": "index.coffee",
   "engines": {
     "node": "0.10.x"
   }
